SSCS-11740 - Mere changes into 10865 bulk branch.